# blunder-bot

./: .gitignore  CMakeLists.txt  main.cpp
cpp/include/: bitboard.h  constants.h  move_generator.h  net.h  position.h  search.h  squares.h  useful_fens.h  utils.h
cpp/src/: CMakeLists.txt  bitboard.cpp  move_generator.cpp  net.cpp  position.cpp  search.cpp  zobrist_hash.cpp
include/: board.h  constants.h  move_generator.h  net.h  position.h  search.h  utils.h  zobrist_hash.h
notes/: worklog.md
python/supervised_learning/: convert_to_torchscript.py  data.py  model.py  train.py
src/: CMakeLists.txt  Makefile  board.cpp  move_generator.cpp  position.cpp  search.cpp  utils.cpp  zobrist_hash.cpp
test/: CMakeLists.txt  test_bitboard.cpp  test_move_generator.cpp  test_position.cpp  test_utils.cpp  test_zobrist_hash.cpp
